[ GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]


Bucardo version 5.1.3


  - Fix problem of not clearing out stagetable before using it. There was a 
    chance that a previous KID left some rows in there, in which case duplicate 
    entries will appear in bucardo_track.
    [Greg Sabino Mullane]


Bucardo version 5.1.2, released October 15, 2014 (git commit 6b8f02feaef5b116dfba9b57f6a0617d73ba3657)

  - Fix problem with async failures
    [Greg Sabino Mullane]

  - Fix add_customcols params parsing
    [David Christensen]

  - Improve MCP loop handling on errors
    [Greg Sabino Mullane]

  - Make sure makedelta can be set for all databases, not just source ones
    [Greg Sabino Mullane]

  - Fix minor bug in send_mail subroutine
    [Greg Sabino Mullane]

  - Remove Encode::Locale dependency
    [Joshua Tolley]

  - Allow 'git list config*' to work as an alias for git config.
    Make plain 'git config' act as 'git show all'
    [Greg Sabino Mullane]


Bucardo version 5.1.1, released July 23, 2014 (git commit c91753ef834cdcac311d66851947d1e4cb8acc7c)

  - Minor fixes to conflict handling. [GSM]

  - Fix upgrade to add updating of defaults. [GSM]


Bucardo version 5.1.0, released July 14, 2014 (git commit 7465d87ec60d29555fc2a38e70e08cc09e33a7db)

  - Many fixes and features added to the conflict resolution system. [GSM]

  - Fix the upgrade so new constraints are handled better. [GSM]


Bucardo version 5.0.0, released June 23, 2014 (git commit 2349582733df31a4115b952bfcc2f5732d5af16a)

  - Complete rework of Bucardo: we now allow as many source and target 
    databases as wanted in a single sync. [GSM]

  - Allow alternate targets: Drizzle, MariaDB, MongoDB, MySQL, Oracle, Redis, 
    SQLite, as well as "flat files" [GSM]

  - Rename "bucardo_ctl" to simply "bucardo" [Jon Jensen, GSM]

  - Rename "goat" to "relation" or, more commonly, "table" and "sequence".
    [David Wheeler]
