@@ -77,6 +77,7 @@ help(1) unless @ARGV;
 my $bcargs = {
               quiet        => 0,
               verbose      => 0,
+              quickstart   => 0,
               bcverbose    => 1,
               dbname       => 'bucardo',
               dbuser       => 'bucardo',
@@ -139,6 +140,7 @@ GetOptions ## no critic (ProhibitCallsToUndeclaredSubs)
      'vvv',
      'vvvv',
      'quiet+',
+     'quickstart',
      'notimer',
      'help|?',
      'debug!',
