@@ -4,6 +4,10 @@
 Bucardo version 5.1.3
 
 
+  - quickstart: new parameter to give on startup (e.g. "bucardo start --quickstart"). 
+    When set, skips checking the tables and columns on remote databases.
+    [Greg Sabino Mullane]
+
   - Fix problem of not clearing out stagetable before using it. There was a 
     chance that a previous KID left some rows in there, in which case duplicate 
     entries will appear in bucardo_track.
